tests/fail/d007_unbound.dew
# D007: unbound variable — x never defined
def main = fn () {
    x
}
